--- a/privacy.html
+++ b/privacy.html
@@ -9,11 +9,11 @@
       font-family: 'Segoe UI', sans-serif; 
       margin: 20px; 
       line-height: 1.6; 
-      color: #fff; 
-      background-color: #333; 
+      color: #333;           /* dark gray text */
+      background-color: #f2f2f2;  /* light gray background */
     }
-    h1, h2 { color: #1E90FF; }
-    a { color: #1E90FF; }
+    h1, h2 { color: #444; }   /* slightly darker gray for headings */
+    a { color: #1E90FF; }      /* links in blue for visibility */
   </style>
 </head>
 <body>
