--- a/privacy.html
+++ b/privacy.html
@@ -1,63 +1,79 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Privacy Policy — ZCoverage LLC</title>
-  <style>
-    body { 
-      font-family: 'Segoe UI', sans-serif; 
-      margin: 20px; 
-      line-height: 1.6; 
-      color: #333;           /* dark gray text */
-      background-color: #f2f2f2;  /* light gray background */
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>Privacy Policy — ZCoverage LLC</title>
+<style>
+    body {
+        font-family: 'Segoe UI', sans-serif;
+        margin: 0;
+        background: #f2f2f2;
+        color: #333;
+        line-height: 1.6;
     }
-    h1, h2 { color: #444; }   /* slightly darker gray for headings */
-    a { color: #1E90FF; }      /* links in blue for visibility */
-  </style>
+    .container {
+        max-width: 900px;
+        margin: 40px auto;
+        padding: 20px;
+        background: #fff;
+        border-radius: 8px;
+        box-shadow: 0 4px 12px rgba(0,0,0,0.1);
+    }
+    h1 {
+        color: #333;
+        font-size: 2rem;
+        margin-bottom: 10px;
+    }
+    h2 {
+        color: #555;
+        font-size: 1.4rem;
+        margin-top: 25px;
+        margin-bottom: 10px;
+    }
+    p {
+        margin-bottom: 16px;
+        font-size: 1rem;
+        color: #444;
+    }
+    em {
+        color: #888;
+        font-size: 0.9rem;
+    }
+</style>
 </head>
 <body>
-  <h1>Privacy Policy</h1>
-  <p><em>Last updated: September 17, 2025</em></p>
+  <div class="container">
+    <h1>Privacy Policy</h1>
+    <p><em>Last updated: September 17, 2025</em></p>
 
-  <p>ZCoverage LLC (“we,” “our,” “us”) is a licensed insurance agency. We respect your privacy and are committed to protecting your personal information. This policy explains how we collect, use, and safeguard your data.</p>
+    <h2>1. Information We Collect</h2>
+    <p>
+      As a licensed insurance agency, ZCoverage LLC collects personal information necessary to provide health insurance solutions through contracted carriers. This includes name, contact details, date of birth, health information, and any other data required by the carrier or marketplace for enrollment purposes.
+    </p>
 
-  <h2>1. Information We Collect</h2>
-  <ul>
-    <li>Basic details: name, date of birth, address, phone number, and email.</li>
-    <li>Information needed for insurance applications, such as Social Security number, household details, and income.</li>
-    <li>Health information when required to determine eligibility for certain insurance plans.</li>
-  </ul>
+    <h2>2. How We Use Information</h2>
+    <p>
+      Information is used solely to identify and enroll clients in appropriate health insurance plans. We do not sell, trade, or share personal information for marketing purposes.
+    </p>
 
-  <h2>2. How We Use Information</h2>
-  <ul>
-    <li>Providing quotes and plan comparisons.</li>
-    <li>Submitting applications to insurance carriers or government marketplaces.</li>
-    <li>Communicating with you about insurance options.</li>
-    <li>Meeting legal and regulatory requirements.</li>
-  </ul>
-  <p><strong>We do not sell your personal information.</strong></p>
+    <h2>3. Data Security</h2>
+    <p>
+      We take reasonable administrative, technical, and physical safeguards to protect personal information against unauthorized access, disclosure, or loss.
+    </p>
 
-  <h2>3. Sharing Information</h2>
-  <ul>
-    <li>Insurance carriers when applying for coverage.</li>
-    <li>Government marketplaces (e.g., Healthcare.gov) when required.</li>
-    <li>Licensed partners (such as FMOs) for compliance purposes.</li>
-    <li>Regulatory authorities when required by law.</li>
-  </ul>
+    <h2>4. Third-Party Services</h2>
+    <p>
+      We may use third-party services to facilitate plan enrollment or processing. These third parties are contractually obligated to maintain confidentiality and security of your information.
+    </p>
 
-  <h2>4. Protecting Your Information</h2>
-  <p>We use industry-standard safeguards to protect your personal data. Access is restricted to authorized personnel only.</p>
-
-  <h2>5. Your Rights</h2>
-  <p>You may have the right to access, correct, or request deletion of your data, subject to legal requirements.</p>
-
-  <h2>6. Contact Us</h2>
-  <p>
-    ZCoverage LLC<br>
-    [Business Address]<br>
-    [Email Address]<br>
-    [Phone Number]
-  </p>
+    <h2>5. Contact Us</h2>
+    <p>
+      ZCoverage LLC<br>
+      [Business Address]<br>
+      <a href="mailto:contact@zcoverage.com">contact@zcoverage.com</a><br>
+      [Phone Number]
+    </p>
+  </div>
 </body>
 </html>
