--- a/terms.html
+++ b/terms.html
@@ -8,7 +8,7 @@
     body {
         font-family: 'Segoe UI', sans-serif;
         margin: 0;
-        background: #f2f2f2; /* light gray background */
+        background: #f2f2f2;
         color: #333;
         line-height: 1.6;
     }
@@ -16,7 +16,7 @@
         max-width: 900px;
         margin: 40px auto;
         padding: 20px;
-        background: #fff; /* white content box */
+        background: #fff;
         border-radius: 8px;
         box-shadow: 0 4px 12px rgba(0,0,0,0.1);
     }
@@ -26,7 +26,7 @@
         margin-bottom: 10px;
     }
     h2 {
-        color: #555; /* dark gray headings */
+        color: #555;
         font-size: 1.4rem;
         margin-top: 25px;
         margin-bottom: 10px;
@@ -49,12 +49,12 @@
 
     <h2>1. Services Provided</h2>
     <p>
-      ZCoverage LLC is a licensed insurance agency in Texas. We offer health insurance solutions including Affordable Care Act (ACA) marketplace plans, Medicare Advantage, Medicare Supplement (Medigap), prescription drug plans (Part D), and non-ACA coverage options where legally permitted. Services are offered by licensed agent Zainub Rahman (NPN# [Insert Number]) and other licensed representatives of ZCoverage LLC, where applicable.
+      ZCoverage LLC is a licensed insurance agency in Texas. We offer health insurance solutions including ACA marketplace plans, Medicare Advantage, Medicare Supplement (Medigap), prescription drug plans (Part D), and non-ACA coverage options where legally permitted. Services are provided by licensed agent Zainub Rahman (NPN# [Insert Number]) and other licensed representatives of ZCoverage LLC where applicable.
     </p>
 
     <h2>2. Information Disclaimer</h2>
     <p>
-      Information provided on this website is for general educational purposes only. It should not be considered legal, tax, or medical advice. Plan availability and eligibility are determined by the issuing carrier or government marketplace.
+      Information on this website is for general educational purposes only. It should not be considered legal, tax, or medical advice. Plan availability and eligibility are determined by the issuing carrier or government marketplace.
     </p>
 
     <h2>3. No Guarantee of Coverage</h2>
