--- a/disclaimer.html
+++ b/disclaimer.html
@@ -8,7 +8,7 @@
     body {
         font-family: 'Segoe UI', sans-serif;
         margin: 0;
-        background: #f2f2f2; /* light gray background */
+        background: #f2f2f2;
         color: #333;
         line-height: 1.6;
     }
@@ -16,7 +16,7 @@
         max-width: 900px;
         margin: 40px auto;
         padding: 20px;
-        background: #fff; /* white content box */
+        background: #fff;
         border-radius: 8px;
         box-shadow: 0 4px 12px rgba(0,0,0,0.1);
     }
@@ -47,6 +47,14 @@
 
     <p>
       Insurance plan details, premiums, and eligibility are determined solely by the insurance carriers and government marketplaces. Submitting information through this site does not guarantee coverage or enrollment.
+    </p>
+
+    <h2>Contact</h2>
+    <p>
+      ZCoverage LLC<br>
+      [Business Address]<br>
+      <a href="mailto:contact@zcoverage.com">contact@zcoverage.com</a><br>
+      [Phone Number]
     </p>
   </div>
 </body>
