--- a/privacy.html
+++ b/privacy.html
@@ -8,7 +8,7 @@
     body {
         font-family: 'Segoe UI', sans-serif;
         margin: 0;
-        background: #f2f2f2;
+        background: #f2f2f2; /* light gray background */
         color: #333;
         line-height: 1.6;
     }
@@ -16,7 +16,7 @@
         max-width: 900px;
         margin: 40px auto;
         padding: 20px;
-        background: #fff;
+        background: #fff; /* white content box */
         border-radius: 8px;
         box-shadow: 0 4px 12px rgba(0,0,0,0.1);
     }
@@ -49,7 +49,7 @@
 
     <h2>1. Information We Collect</h2>
     <p>
-      As a licensed insurance agency, ZCoverage LLC collects personal information necessary to provide health insurance solutions through contracted carriers. This includes name, contact details, date of birth, health information, and any other data required by the carrier or marketplace for enrollment purposes.
+      ZCoverage LLC collects personal information necessary to provide health insurance solutions through contracted carriers. This includes name, contact details, date of birth, health information, and any other data required by the carrier or marketplace for enrollment purposes.
     </p>
 
     <h2>2. How We Use Information</h2>
@@ -67,7 +67,7 @@
       We may use third-party services to facilitate plan enrollment or processing. These third parties are contractually obligated to maintain confidentiality and security of your information.
     </p>
 
-    <h2>5. Contact Us</h2>
+    <h2>5. Contact</h2>
     <p>
       ZCoverage LLC<br>
       [Business Address]<br>
