--- a/privacy.html
+++ b/privacy.html
@@ -8,7 +8,7 @@
     body {
         font-family: 'Segoe UI', sans-serif;
         margin: 0;
-        background: #f2f2f2; /* light gray background */
+        background: #f2f2f2; /* page background */
         color: #333;
         line-height: 1.6;
     }
@@ -16,7 +16,8 @@
         max-width: 900px;
         margin: 40px auto;
         padding: 20px;
-        background: #fff; /* white content box */
+        background: #fff; /* white content background */
+        border: 1px solid #ccc; /* light gray border matching terms/disclaimer */
         border-radius: 8px;
         box-shadow: 0 4px 12px rgba(0,0,0,0.1);
     }
