--- a/privacy.html
+++ b/privacy.html
@@ -16,10 +16,9 @@
         max-width: 900px;
         margin: 40px auto;
         padding: 20px;
-        background: #fff; /* white content background */
-        border: 1px solid #ccc; /* light gray border matching terms/disclaimer */
+        background: #fff; /* white content box */
         border-radius: 8px;
-        box-shadow: 0 4px 12px rgba(0,0,0,0.1);
+        box-shadow: 0 4px 12px rgba(0,0,0,0.1); /* subtle shadow */
     }
     h1 {
         color: #333;
