--- a/disclaimer.html
+++ b/disclaimer.html
@@ -49,12 +49,12 @@
       Insurance plan details, premiums, and eligibility are determined solely by the insurance carriers and government marketplaces. Submitting information through this site does not guarantee coverage or enrollment.
     </p>
 
-    <h2>Contact</h2>
+    <h2>Contact Information</h2>
     <p>
       ZCoverage LLC<br>
-      [Business Address]<br>
+      922 Kilbridge Ln, Coppell TX 75019<br>
       <a href="mailto:contact@zcoverage.com">contact@zcoverage.com</a><br>
-      [Phone Number]
+      817 668 5050
     </p>
   </div>
 </body>
