--- a/disclaimer.html
+++ b/disclaimer.html
@@ -54,8 +54,10 @@
       ZCoverage LLC<br>
       922 Kilbridge Ln, Coppell TX 75019<br>
       <a href="mailto:contact@zcoverage.com">contact@zcoverage.com</a><br>
-      817 668 5050
-    </p>
+      817 668 5050<br>
+      Agent | TX License# 3333049<br>
+      Agency| TX License# 3377407
+    </p> 
   </div>
 </body>
 </html>
