--- a/disclaimer.html
+++ b/disclaimer.html
@@ -56,7 +56,7 @@
       <a href="mailto:contact@zcoverage.com">contact@zcoverage.com</a><br>
       817 668 5050<br>
       Agent | TX License# 3333049<br>
-      Agency| TX License# 3377407
+      Agency| TX License# 3377407<br>
     </p> 
   </div>
 </body>
