--- a/privacy.html
+++ b/privacy.html
@@ -67,13 +67,15 @@
       We may use third-party services to facilitate plan enrollment or processing. These third parties are contractually obligated to maintain confidentiality and security of your information.
     </p>
 
-    <h2>5. Contact</h2>
-    <p>
-      ZCoverage LLC<br>
-      [Business Address]<br>
-      <a href="mailto:contact@zcoverage.com">contact@zcoverage.com</a><br>
-      [Phone Number]
-    </p>
+<h2>Contact Information</h2>
+<p>
+  ZCoverage LLC<br>
+  922 Kilbridge Ln, Coppell TX 75019<br>
+  <a href="mailto:contact@zcoverage.com">contact@zcoverage.com</a><br>
+  <a href="tel:+18176685050">817 668 5050</a><br>
+  Agent | TX License# 3333049<br>
+  Agency | TX License# 3377407<br>
+</p>
   </div>
 </body>
 </html>
