--- a/faq.html
+++ b/faq.html
@@ -9,7 +9,7 @@
     body {
         font-family: 'Inter', sans-serif;
         margin: 0;
-        background: #fff;
+        background: #f2f2f2;;
         color: #333;
         line-height: 1.5;
     }
@@ -22,12 +22,12 @@
         padding:0 20px;
     }
     h1 {
-        font-size:2rem;
+        font-size:1.2rem;
         text-align:center;
         margin-bottom:1rem;
     }
     h2 {
-        font-size:1.3rem;
+        font-size:0.9rem;
         margin:1.2rem 0 0.4rem;
         color:#0B1D3A;
         border-bottom:1px solid #eee;
