--- a/services.html
+++ b/services.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Our Services — ZCoverage LLC</title>
+<title>Our Services</title>
 <style>
     body {
         font-family: 'Segoe UI', sans-serif;
@@ -22,18 +22,18 @@
         box-shadow: 0 4px 12px rgba(0,0,0,0.1);
     }
     h1 {
-        font-size: 2rem;
+        font-size: 1.2rem;
         margin-bottom: 10px;
         color: #333;
     }
     h2 {
-        font-size: 1.4rem;
+        font-size: 0.9rem;
         margin-top: 25px;
         margin-bottom: 10px;
         color: #555;
     }
     p {
-        font-size: 1rem;
+        font-size: 0.8rem;
         color: #444;
         margin-bottom: 16px;
     }
