--- a/privacy.html
+++ b/privacy.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Privacy Policy — ZCoverage LLC</title>
+<title>Privacy Policy</title>
 <style>
     body {
         font-family: 'Segoe UI', sans-serif;
