--- a/terms.html
+++ b/terms.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Terms of Use — ZCoverage LLC</title>
+<title>Terms of Use</title>
 <style>
     body {
         font-family: 'Segoe UI', sans-serif;
@@ -22,18 +22,18 @@
     }
     h1 {
         color: #333;
-        font-size: 2rem;
+        font-size: 1.2rem;
         margin-bottom: 10px;
     }
     h2 {
         color: #555;
-        font-size: 1.4rem;
+        font-size: 0.9rem;
         margin-top: 25px;
         margin-bottom: 10px;
     }
     p {
         margin-bottom: 16px;
-        font-size: 1rem;
+        font-size: 0.8rem;
         color: #444;
     }
     em {
@@ -77,7 +77,7 @@
   ZCoverage LLC<br>
   922 Kilbridge Ln, Coppell TX 75019<br>
   <a href="mailto:contact@zcoverage.com">contact@zcoverage.com</a><br>
-  <a href="tel:+18176685050">817 668 5050</a><br>
+  <a href="tel:+18176685050">817.668.5050</a><br>
   Agent | TX License# 3333049<br>
   Agency | TX License# 3377407<br>
 </p>
