Update contact email in disclaimer.html

--- a/disclaimer.html
+++ b/disclaimer.html
@@ -55,7 +55,7 @@
 <p>
   ZCoverage LLC<br>
   922 Kilbridge Ln, Coppell TX 75019<br>
-  <a href="mailto:contact@zcoverage.com">contact@zcoverage.com</a><br>
+  <a href="mailto:info@zcoverage.com">info@zcoverage.com</a><br>
   <a href="tel:+18176685050">817 668 5050</a><br>
   Agent | TX License# 3333049<br>
   Agency | TX License# 3377407<br>
